[build-system]
requires = ["setuptools >= 62.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowddl"
authors = [
    {name = "Vitaly Markov", email = "wild.desu@gmail.com"}
]
description = "Object management automation tool for Snowflake"
keywords = ["snowflake", "database", "schema", "object", "change", "ddl", "sql", "create", "alter", "drop", "grant", "table", "view"]
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
urls = {Homepage = "https://github.com/littleK0i/snowddl"}
requires-python = ">=3.9"
dependencies = [
    "jsonschema~=4.18",
    "pydantic~=2.4",
    "pyyaml~=6.0",
    "snowflake-connector-python~=3.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
convert = [
    "sqlglot"
]
dev = [
    "black",
    "pytest",
    "ruff",
]
sso-caching = [
    "snowflake-connector-python[secure-local-storage]~=3.0"
]

[project.scripts]
snowddl = "snowddl.app.base:entry_point"
snowddl-convert = "snowddl.app.convert:entry_point"
snowddl-singledb = "snowddl.app.singledb:entry_point"
snowddl-fernet = "snowddl.fernet.cli:entry_point"

[tool.black]
line-length = 130

[tool.ruff]
line-length = 130
ignore = ["E501", "E731"]
include = ["snowddl/**/*.py"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"snowddl/resolver/abc_schema_object_resolver.py" = ["F401"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
snowddl = ["_config/**/*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "snowddl.version.__version__"}
