[metadata]
name = snowddl
version = attr: snowddl.version.__version__

author = Vitaly Markov
author_email = wild.desu@gmail.com
url = https://github.com/littleK0i/snowddl

description = Object management automation tool for Snowflake
long_description = file: README.md
long_description_content_type = text/markdown

keywords = snowflake,database,schema,object,change,ddl,sql,create,alter,drop,grant,table,view

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Database
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:

python_requires = >=3.7
install_requires =
    snowflake-connector-python
    pyyaml
    jsonschema

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
    snowddl = snowddl.app.base:entry_point
    snowddl-convert = snowddl.app.convert:entry_point
    snowddl-singledb = snowddl.app.singledb:entry_point

[options.package_data]
snowddl = _config/**/*.yaml
